- better save() mechanism (simpler)
2.0.8.1 (04/10/2019)
- when <<toto|d>>, now x=None if toto is an undefined var (no more "toto")
2.0.8.0 (03/10/2019)
- dual exchanges list is now a tuple of 2 items (3 before) : take less space in rmr!
- (a lot) better var resolution in env
- html rendering redisplay rendered url (in place of path) when not dual (like reqman1)!
- FIX: matching req (dual mode) when "id" are the same (foreach loop/same pattern)
2.0.7.0 (2019)
- add stpl to setup.py (ouppssss)
2.0.6.0 (2019)
- better shebang (linux compat)
- FIX: win cross device test enabled 
- evol: better test value display
2.0.5.0 (2019)
- FIX: local params are overrided by higher params (pato style)
- FIX: write html in utf8+bom
- EVOL: (for tests/debug only) add a view() mechanism, to display "exe" extended results in an html page in a browser
2.0.4.0
- EVOL: all(ymls/conf/response content) is converted to utf8 str
2.0.3.0
- FIX: dyn params can be transformed now, and can be bytes
2.0.2.0
- FIX: override headers with None/null to remove it
2.0.1.0
- FIX: replaying works now when switchs declare a BEGIN/END
2.0.0.0
- full rewrite from scratch + new features

1.4.4.0 (02/07/2019)
 - FIX: replacing doc was bugged in some complex cases
1.4.3.0 (01/07/2019)
 - better release (pytest zzz_OldTest are ok now)
1.4.2.0 (01/07/2019)
 - doc is replacable (can embed vars)
1.4.1.0 (01/07/2019)
 - FIX: "server is down" & CTRL-C exception handling in async (pytest zzz_OldTest are flaky)
1.4.0.0 (10/06/2019)
 - use httpcore 0.4.0
1.3.2.3 BETA: (4/06/2019)
 - require httpcore==0.3.0
1.3.2.2 BETA: (28/05/2019)
 - better cookiestore
1.3.2.1 BETA: (28/05/2019)
 - FIX: parallelizm with begin/end
1.3.1.1 BETA: (27/05/2019)
 - console output: better display in parallelism mode
1.3.1.0 BETA: (27/05/2019)
 - cookies are stored in env, so parallelism works as excpected (each file has his cookiejar)
1.3.0.2 BETA: (27/05/2019)
 - fix: env are cloned when parallelizm